Rebrand to Tempus

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
   <head>
     <base target="_top">
     <?!= include('views/partials/head'); ?>
-    <title>Timesheet App</title>
+    <title></title>
   </head>
   <body class="ts-body ts-theme-dark">
     <?!= include('views/partials/navbar'); ?>
