--- a/views/index.html
+++ b/views/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <base target="_top">
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' rx='20' fill='%23f97316'/%3E%3Ctext x='50' y='72' font-size='70' font-weight='800' font-family='system-ui' text-anchor='middle' fill='white'%3ET%3C/text%3E%3C/svg%3E">
     <?!= include('views/partials/head'); ?>
-    <title></title>
   </head>
   <body class="ts-body ts-theme-dark">
     <?!= include('views/partials/navbar'); ?>
